# Rap

./: issues.md  pyproject.toml
rap/: __init__.py  entrypoints.py  main.py
rap/generator/: Generator.py
rap/preprocessing/: Counting_class.py  Database_ops.py  Spanish_corpus.py  Spider_preprocessing.py  Style_processing.py
rap/scrapping/: Scrapper.py
rap/visualization/: ArtistVisualization.py  StyleVisualization.py  __init__.py
