[tool.poetry]
name = "rap"
version = "0.1.0"
description = "Program that fetches lyrics and trains a model to create new lyrics"
authors = ["Pablo Jiménez Garcia <pablojimenezgarcia1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
wordcloud = "^1.8.2.2"
pymongo = "^4.3.3"
nltk = "^3.7"
unidecode = "^1.3.6"
seaborn = "^0.12.1"
markovify = "^0.9.4"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rap = "rap.main:main"